app/sass/top_bar.sass
$twitter: #1da1f2
$github: #000
$stack-overflow: #f69c55
$dribbble: #ea4c89


.top-bar
  position: fixed
  width: 100vw
  background-color: $header-section-background
  color: $light-text-primary

  // z-index of 1 places the top bar behind the laptop but in front of everything else
  z-index: 1

  list-style: none
  margin: 0
  padding: calc((15px + 1vw) / 2)


  li
    display: inline-block
    overflow: visible


    &.name
      font-family: 'Montserrat', sans-serif
      font-weight: 500
      font-size: calc(15px + 1vw)
      vertical-align: -30%
      text-transform: uppercase
      letter-spacing: .1em

      // Hover effect
      position: relative

      &::after
        content: ''
        width: 100%
        height: 2px
        position: absolute
        left: 0
        bottom: 0
        background-color: $light-text-primary
        transform: scaleX(0)
        transform-origin: bottom right
        transition: transform .4s cubic-bezier(.215, .61, .355, 1)

      &:hover
        &::after
          transform: scaleX(1)
          transform-origin: bottom left

      // Adjust spacing between capital Y and capital L
      span
        letter-spacing: .1em

    &.right
      float: right

    i
      display: inline-block
      padding: 0 .5em

      color: $light-text-primary
      transition: color .2s ease
      overflow: visible

      &::after
        content: ''
        display: inline-block
        background-color: $white
        // Round
        border-radius: 50%
        width: 45px
        height: 45px
        // Shouldn't take up space
        position: absolute
        // radial growth will animate
        transition: transform .2s ease-out, opacity .2s ease-out
        opacity: 0
        z-index: 1

      // Make sure that the icons appear on top of their backgrounds
      &::before
        position: relative
        z-index: 2

      &:hover
        &::after
          opacity: 1


      // Specific styles for each different logo. Transforms need to be different
        for each bubble because each icon is differently sized and centered


      &.fa-twitter
        font-size: 25px
        transform: translateY(.07em)

        &::after
          transform: translateX(-34.5px) translateY(-10px) scale(.01, .01)

        &:hover
          color: $twitter

          &::after
            transform: translateX(-34.5px) translateY(-10px)


      &.fa-github
        font-size: 29px

        &::after
          transform: translateX(-35px) translateY(-8px) scale(.01, .01)

        &:hover
          color: $github

          &::after
            transform: translateX(-35px) translateY(-8px)


      &.fa-stack-overflow
        font-size: 23px
        line-height: 27px
        vertical-align: baseline

        &::after
          transform: translateX(-32px) translateY(-7.5px) scale(.01, .01)

        &:hover
          color: $stack-overflow

          &::after
            transform: translateX(-32px) translateY(-7.5px)


      &.fa-dribbble
        font-size: 30px

        &::after
          transform: translateX(-35.5px) translateY(-7px) scale(.01, .01)

        &:hover
          color: $dribbble

          &::after
            transform: translateX(-35.5px) translateY(-7px)

